minus update dokumentasi tok plss

--- a/frontend_next/app/globals.css
+++ b/frontend_next/app/globals.css
@@ -92,3 +92,11 @@ body {
   flex-grow: 1 !important;
   text-align: left !important;
 }
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
